--- a/contacto.html
+++ b/contacto.html
@@ -143,7 +143,7 @@
                 <div class="contact-item">
                     <h3>Dirección</h3>
                     <p>Rivadavia 220, Quilmes, Buenos Aires</p>
-                    <a href="https://maps.google.com/?q=Rivadavia+220,+Quilmes" target="_blank" class="map-link">Ver en Google Maps</a>
+                    <a href="https://maps.app.goo.gl/L5gAvmcjgZpZbtFs8" target="_blank" class="map-link">Ver en Google Maps</a>
                 </div>
                 <div class="contact-item">
                     <h3>Horarios</h3>
