carga de calefacciones 1

--- a/categoria.html
+++ b/categoria.html
@@ -63,7 +63,8 @@
         <li class="has-submenu">
             <a href="categoria.html?nombre=Climatizacion">Climatización</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion">Calefacción</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion electrica">Calefacción eléctrica</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion a gas">Calefacción a gas</a></li>
                 <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">Ventilación</a></li>
                 <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Aires acondicionados">Aires Acondicionados</a></li>
             </ul>
@@ -93,18 +94,18 @@
                 <li><a href="categoria.html?nombre=Termotanques&subcategoria=Dual">Dual</a></li>
             </ul>
         </li><li class="has-submenu">
-            <a href="categoria.html?nombre=Pequeños Electrodomésticos">Pequeños</a>
+            <a href="categoria.html?nombre=Pequeños electrodomesticos">Pequeños</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Batidoras">Batidoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Licuadoras">Licuadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Mixers">Mixers</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Pavas Eléctricas">Pavas Eléctricas</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Cafeteras">Cafeteras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Tostadoras">Tostadoras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
-                <li><a href="categoria.html?nombre=Pequeños Electrodomésticos&subcategoria=Picadoras">Picadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Batidoras">Batidoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Licuadoras">Licuadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Multiprocesadoras">Multiprocesadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Mixers">Mixers</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Pavas electricas">Pavas Eléctricas</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Cafeteras">Cafeteras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Tostadoras">Tostadoras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Sandwicheras">Sandwicheras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subCategoria=Exprimidores y jugueras">Exprimidores y Jugueras</a></li>
+                <li><a href="categoria.html?nombre=Pequeños electrodomesticos&subcategoria=Picadoras">Picadoras</a></li>
             </ul>
         </li>
         <li class="has-submenu">
@@ -235,11 +236,19 @@
             "Red móvil",
             "RAM (GB)"
         ],
-        "climatizacion": [
-            "Tipo de equipo",
-            "Capacidad de enfriamiento",
-            "Eficiencia energética"
+        "climatizacion": {
+            "calefaccion electrica": [
+                "Potencia (W)",
+                "Cantidad de velas",
+                "Giratoria"
         ],
+            "calefaccion a gas": [
+                "Potencia (Kcal)",
+                "Tipo",
+                "Tipo de gas",
+                "Tipo"
+        ]
+    },
         "cocinas": [
             "Tipo de uso",
             "Dimensiones",
