--- a/privacidad.html
+++ b/privacidad.html
@@ -65,7 +65,8 @@
         <li class="has-submenu">
             <a href="categoria.html?nombre=Climatizacion">Climatización</a>
             <ul class="submenu">
-                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion">Calefacción</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion electrica">Calefacción eléctrica</a></li>
+                <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Calefaccion a gas">Calefacción a gas</a></li>
                 <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Ventilacion">Ventilación</a></li>
                 <li><a href="categoria.html?nombre=Climatizacion&subcategoria=Aires acondicionados">Aires Acondicionados</a></li>
             </ul>
