interval refresh 1min

--- a/admin-stats.html
+++ b/admin-stats.html
@@ -241,7 +241,7 @@
     </div>
     <script>
         // Configuración
-        const REFRESH_INTERVAL = 5 * 60 * 1000; // 5 minutos
+        const REFRESH_INTERVAL = 1 * 60 * 1000 ; // 1 minuto
         const SESSION_DURATION = 60 * 60 * 1000; // 1 hora
 
         // Verificar sesión al cargar
