--- a/admin-stats.html
+++ b/admin-stats.html
@@ -190,7 +190,7 @@
                 <button class="btn btn-danger" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Cerrar Sesión</button>
             </div>
         </div>
-        <p class="refresh-info">Datos actualizados cada 5 minutos</p>
+        <p class="refresh-info">Datos actualizados cada 1 minuto</p>
         <div class="dashboard">
             <div class="card">
                 <h2><i class="fas fa-chart-line"></i> Resumen</h2>
