--- a/admin-stats.html
+++ b/admin-stats.html
@@ -269,7 +269,7 @@
         function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-            if (username === '' && password === '') {
+            if (username === 'centerq' && password === 'centerhquilmes') {
                 const now = new Date().getTime();
                 const session = {
                     isAuthenticated: true,
