--- a/admin-stats.html
+++ b/admin-stats.html
@@ -285,7 +285,7 @@
         function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-            if (username === 'admin' && password === 'miClave123') {
+            if (username === 'centerh' && password === 'centerhquilmes') {
                 const now = new Date().getTime();
                 const session = {
                     isAuthenticated: true,
